; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_igafb.c_iga_blank_border.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_igafb.c_iga_blank_border.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iga_par = type { i32 }

@IGA_EXT_CNTRL = common dso_local global i32 0, align 4
@IGA_IDX_OVERSCAN_COLOR = common dso_local global i64 0, align 8
@IGA_ATTR_CTL = common dso_local global i32 0, align 4
@IGA_IDX_VGA_OVERSCAN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iga_par*)* @iga_blank_border to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iga_blank_border(%struct.iga_par* %0) #0 {
  %2 = alloca %struct.iga_par*, align 8
  %3 = alloca i32, align 4
  store %struct.iga_par* %0, %struct.iga_par** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %15, %1
  %5 = load i32, i32* %3, align 4
  %6 = icmp slt i32 %5, 3
  br i1 %6, label %7, label %18

7:                                                ; preds = %4
  %8 = load %struct.iga_par*, %struct.iga_par** %2, align 8
  %9 = load i32, i32* @IGA_EXT_CNTRL, align 4
  %10 = load i64, i64* @IGA_IDX_OVERSCAN_COLOR, align 8
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %10, %12
  %14 = call i32 @iga_outb(%struct.iga_par* %8, i32 0, i32 %9, i64 %13)
  br label %15

15:                                               ; preds = %7
  %16 = load i32, i32* %3, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %3, align 4
  br label %4

18:                                               ; preds = %4
  ret void
}

declare dso_local i32 @iga_outb(%struct.iga_par*, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
